Tweaking, and adding cross browser support

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="author" content="Fat Media">
 		<link rel="stylesheet" href="style.css">
-		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lato|Lato:100|Lato:b|Lora|Lora:b|Lora:bi|Lora:i|Merriweather|Merriweather:300|Oswald|Oswald:300|Oswald:700">
+		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lato|Lato:100|Lato:b|Lora|Lora:b|Lora:bi|Lora:i|Merriweather|Merriweather:300|Merriweather:700|Merriweather:900|Oswald|Oswald:300|Oswald:700">
 		<title>Fat Media</title>
 	</head>
 	<body>
@@ -59,8 +59,8 @@
 			<section id="transformers">
 				<img src="img/transformers.png" alt="Transformers film bluray packaging.">
 				<div id="transformerShadow"></div>
-				<h1 class="medium">TRANSFORMERS</h1>
-				<h2>REVENGE OF THE FALLEN</h2>
+				<h1 id="filmTitle">TRANSFORMERS</h1>
+				<h2 id="revenge">REVENGE OF THE FALLEN</h2>
 				<div id="splitter"></div>
 				<p>A noisy, underplotted, and overlong special effects extravaganza that lacks a human touch.</p>
 				<p id="border">––––––––––––</p>
@@ -71,10 +71,12 @@
 					<div id="percentBar"></div>
 				</div>
 				<p id="border">––––––––––––</p>
-				<h2 class="blueText small">WORLD PREMIRE</h2>
-				<h2 class="medium">DEN HAAG THEATRE</h2>
-				<h2 class="blueText medium">THE NETHERLANDS</h2>
-				<h2 class="large">JUNE 23, 2011</h2>
+				<div id="transformersBottom">
+					<h2 class="blueText small">WORLD PREMIRE</h2>
+					<h2 class="medium">DEN HAAG THEATRE</h2>
+					<h2 class="blueText medium">THE NETHERLANDS</h2>
+					<h2 class="large">JUNE 23, 2011</h2>
+				</div>
 				<div id="circle"></div>
 			</section>
 
@@ -82,7 +84,7 @@
 				<img src="img/heads.png">
 				<h1>BORDER BOTTOM LINE</h1>
 				<h2>Awful immigration laws from around the world.</h2>
-				<p><strong>Italy</strong> penalizes illegal immigrants with a fine of €5,000-10,000 and allows immigration officials to detain them for up to 6 months. •  <strong>Switzerland</strong> immediately deports all convicted criminals from other countries and potentially even their family members. •  <strong>Australia</strong> detains all non-citizens without a valid visa.•  <strong>Japan</strong> is allowed to pay $3,000 to each unemployed Latin Americn immigrant of Japanese descent and $2,000 to each of that unemployed worker’s family members to return to their country of origin.• The <strong>United Arab Emirates</strong> prohibits foreigners from engaging in any sort of labor union-like activity, resulting in harsh living conditions, 80-hour work weeks, back-breaking manual labor, and below-minimum-wage pay.</p>
+				<p><strong>Italy</strong> penalizes illegal immigrants with a fine of €5,000-10,000 and allows immigration officials to detain them for up to 6 months. •<strong>Switzerland</strong> immediately deports all convicted criminals from other countries and potentially even their family members. •<strong>Australia</strong> detains all non-citizens without a valid visa. •<strong>Japan</strong> is allowed to pay $3,000 to each unemployed Latin Americn immigrant of Japanese descent and $2,000 to each of that unemployed worker’s family members to return to their country of origin. •The <strong>United Arab Emirates</strong> prohibits foreigners from engaging in any sort of labor union-like activity, resulting in harsh living conditions, 80-hour work weeks, back-breaking manual labor, and below-minimum-wage pay.</p>
 			</section>
 
 			<section id="overflow">
@@ -95,10 +97,10 @@
 			
 			<footer>
 				<div id="leftFooter">
-					<p>2013 CSSOff, Volume 3</p>
+					<p><strong>2013 CSSOff,</strong> Volume 3</p>
 				</div>
 				<div id="rightFooter">
-					<p>Route Gregory, Building 31</p>
+					<p><strong>Route Gregory,</strong> Building 31</p>
 					<p>01630 Prévessin-Moëns, France</p>
 					<p>+41 22 767 61 11</p>
 				</div>
