--- a/index.html
+++ b/index.html
@@ -41,11 +41,21 @@
 					<h3>LIST STYLE: BULLETS.</h3>  <p>A ROUND-UP OF POPULAR AMMUNITION</p>
 				</div>
 				<ul>
-					<li>.223 REMMINGTON 69gr BTHP
-					<li>.308 WINCHESTER 168gr BTHP
-					<li>7.62x39mm RUSSIAN 154gr JSP
-					<li>7.62 THUMPER 220gr RN
-					<li>7.62 THUMPER 240gr BTHP
+					<li>
+						<img src="img/bulletOne.png">
+						<p class="medium">.223</p> <p class="small">REMMINGTON</p> <p class="small">69gr BTHP</p>
+					<li>
+						<img src="img/bulletTwo.png">
+						<p class="medium">.308</p> <p class="small">WINCHESTER</p> <p class="small">168gr BTHP</p>
+					<li>
+						<img src="img/bulletThree.png">
+						<p class="small">7.62x39mm</p> <p class="large">RUSSIAN</p> <p class="large">154gr JSP</p>
+					<li>
+						<img src="img/bulletFour.png">
+						<p class="largest">7.62</p> <p class="large">THUMPER</p> <p class="large">220gr RN</p>
+					<li>
+						<img src="img/bulletFive.png">
+						<p class="largest">7.62</p> <p class="large">THUMPER</p> <p class="large">240gr BTHP</p>
 				</ul>
 			</section>
 
