--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="author" content="Fat Media">
 		<link rel="stylesheet" href="style.css">
-		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lato|Lato:100|Lato:b|Lora|Lora:b|Lora:bi|Lora:i|Merriweather|Merriweather:300|Merriweather:700|Merriweather:900|Oswald|Oswald:300|Oswald:700">
+		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lato|Lato:100|Lato:700|Lora|Lora:b|Lora:bi|Lora:i|Merriweather|Merriweather:300|Merriweather:700|Merriweather:900|Oswald|Oswald:300|Oswald:700">
 		<title>Fat Media</title>
 	</head>
 	<body>
@@ -33,7 +33,7 @@
 			<section id="stayingAfloat">
 				<h3>Staying afloat</h3>
 				<p>Lobsterman John Aldridge fell into the shark-infested water of Long Island while his crewmates were asleep. He was kept afloat for more than 12 hours by his rubber boots, which he used as flotation devices. The coast guard rescued him 43 miles south of Montauk where he fell off his vessel.</p>
-				<img src="img/boots.png">
+				<img src="img/boots.png" alt="A pair of boots">
 			</section>
 
 			<section id="bullets">
@@ -43,10 +43,10 @@
 				<ul>
 					<li>
 						<img src="img/bulletOne.png">
-						<p class="medium">.223</p> <p class="small">REMMINGTON</p> <p class="small">69gr BTHP</p>
+						<p class="largest">.223</p> <p class="small">REMMINGTON</p> <p class="small">69gr BTHP</p>
 					<li>
 						<img src="img/bulletTwo.png">
-						<p class="medium">.308</p> <p class="small">WINCHESTER</p> <p class="small">168gr BTHP</p>
+						<p class="largest">.308</p> <p class="small">WINCHESTER</p> <p class="small">168gr BTHP</p>
 					<li>
 						<img src="img/bulletThree.png">
 						<p class="small">7.62x39mm</p> <p class="large">RUSSIAN</p> <p class="large">154gr JSP</p>
@@ -55,7 +55,7 @@
 						<p class="largest">7.62</p> <p class="large">THUMPER</p> <p class="large">220gr RN</p>
 					<li>
 						<img src="img/bulletFive.png">
-						<p class="largest">7.62</p> <p class="large">THUMPER</p> <p class="large">240gr BTHP</p>
+						<p class="largest">7.62</p> <p class="large">THUMPER</p> <p class="medium">240gr BTHP</p>
 				</ul>
 			</section>
 
@@ -73,25 +73,23 @@
 				<h2 id="revenge">REVENGE OF THE FALLEN</h2>
 				<div id="splitter"></div>
 				<p>A noisy, underplotted, and overlong special effects extravaganza that lacks a human touch.</p>
-				<p id="border">––––––––––––</p>
+				<p id="border">––––––––––––––––––––––––––</p>
 				<div id="rottonTomato">
 					<h2 class="blueText small">ROTTON TOMATO</h2>
 					<h2 id="percent">20%</h2>
 					<h2 class="blueText medium">RATING</h2>
 					<div id="percentBar"></div>
 				</div>
-				<p id="border">––––––––––––</p>
-				<div id="transformersBottom">
-					<h2 class="blueText small">WORLD PREMIRE</h2>
-					<h2 class="medium">DEN HAAG THEATRE</h2>
-					<h2 class="blueText medium">THE NETHERLANDS</h2>
-					<h2 class="large">JUNE 23, 2011</h2>
-				</div>
+				<p id="border">––––––––––––––––––––––––––</p>
+				<h2 class="blueText small" id="worldPremire">WORLD PREMIRE</h2>
+				<h2 class="medium" id="locationOne">DEN HAAG THEATRE</h2>
+				<h2 class="blueText medium" id="locationTwo">THE NETHERLANDS</h2>
+				<h2 class="large" id="date">JUNE 23, 2011</h2>
 				<div id="circle"></div>
 			</section>
 
 			<section id="borderBottomLine">
-				<img src="img/heads.png">
+				<img src="img/heads.png" alt="An Italian man, Indian woman, Asian man, and a blonde woman.">
 				<h1>BORDER BOTTOM LINE</h1>
 				<h2>Awful immigration laws from around the world.</h2>
 				<p><strong>Italy</strong> penalizes illegal immigrants with a fine of €5,000-10,000 and allows immigration officials to detain them for up to 6 months. •<strong>Switzerland</strong> immediately deports all convicted criminals from other countries and potentially even their family members. •<strong>Australia</strong> detains all non-citizens without a valid visa. •<strong>Japan</strong> is allowed to pay $3,000 to each unemployed Latin Americn immigrant of Japanese descent and $2,000 to each of that unemployed worker’s family members to return to their country of origin. •The <strong>United Arab Emirates</strong> prohibits foreigners from engaging in any sort of labor union-like activity, resulting in harsh living conditions, 80-hour work weeks, back-breaking manual labor, and below-minimum-wage pay.</p>
