--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="author" content="Fat Media">
 		<link rel="stylesheet" href="style.css">
-		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lato|Lato:100|Lato:700|Lora|Lora:b|Lora:bi|Lora:i|Merriweather|Merriweather:300|Merriweather:700|Merriweather:900|Oswald|Oswald:300|Oswald:700">
+		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lato%7cLato:100%7cLato:700%7cLora%7cLora:b%7cLora:bi%7cLora:i%7cMerriweather%7cMerriweather:300%7cMerriweather:700%7cMerriweather:900%7cOswald%7cOswald:300%7cOswald:700">
 		<title>Fat Media</title>
 	</head>
 	<body>
@@ -15,7 +15,7 @@
 
 		<article>
 			<section id="positioningRelatives">
-				<img src="img/positionRelative.png" alt="">
+				<img src="img/positionRelative.png" alt="Picutre of some people in a room.">
 				<div id="positionRelativeShadow"></div>
 				<div id="positioningRelativesText">
 					<h3>FEATURE</h3>
@@ -42,19 +42,19 @@
 				</div>
 				<ul>
 					<li>
-						<img src="img/bulletOne.png">
+						<img src="img/bulletOne.png" alt="Remmington bullet">
 						<p class="largest">.223</p> <p class="small">REMMINGTON</p> <p class="small">69gr BTHP</p>
 					<li>
-						<img src="img/bulletTwo.png">
+						<img src="img/bulletTwo.png" alt="Winchester bullet">
 						<p class="largest">.308</p> <p class="small">WINCHESTER</p> <p class="small">168gr BTHP</p>
 					<li>
-						<img src="img/bulletThree.png">
+						<img src="img/bulletThree.png" alt="Russian bullet">
 						<p class="small">7.62x39mm</p> <p class="large">RUSSIAN</p> <p class="large">154gr JSP</p>
 					<li>
-						<img src="img/bulletFour.png">
+						<img src="img/bulletFour.png" alt="Thumper bullet">
 						<p class="largest">7.62</p> <p class="large">THUMPER</p> <p class="large">220gr RN</p>
 					<li>
-						<img src="img/bulletFive.png">
+						<img src="img/bulletFive.png" alt="Thumper bullet">
 						<p class="largest">7.62</p> <p class="large">THUMPER</p> <p class="medium">240gr BTHP</p>
 				</ul>
 			</section>
@@ -73,14 +73,14 @@
 				<h2 id="revenge">REVENGE OF THE FALLEN</h2>
 				<div id="splitter"></div>
 				<p>A noisy, underplotted, and overlong special effects extravaganza that lacks a human touch.</p>
-				<p id="border">––––––––––––––––––––––––––</p>
+				<p class="border">–––––––––––––––––––––––––––––––––</p>
 				<div id="rottonTomato">
 					<h2 class="blueText small">ROTTON TOMATO</h2>
 					<h2 id="percent">20%</h2>
 					<h2 class="blueText medium">RATING</h2>
 					<div id="percentBar"></div>
 				</div>
-				<p id="border">––––––––––––––––––––––––––</p>
+				<p class="border">–––––––––––––––––––––––––––––––––</p>
 				<h2 class="blueText small" id="worldPremire">WORLD PREMIRE</h2>
 				<h2 class="medium" id="locationOne">DEN HAAG THEATRE</h2>
 				<h2 class="blueText medium" id="locationTwo">THE NETHERLANDS</h2>
